// Vitest Snapshot v1

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://reactjs.org/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  React
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://reactjs.org/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  React
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://reactjs.org/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  React
</a>
`;
